--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <table>
   <tbody><tr>
     <td> <a href="https://stat.tamu.edu/"> https://stat.tamu.edu/ </a> </td>
-    <td> <img width="300" src="Moustafa.jpg"> </td>
+    <td> <img width="300" src="./Moustafa.jpg"> </td>
   </tr>
   <tr>
     <td> 
